--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -25,13 +25,13 @@
       <div class="ligne-noire">
         <i class="fa-regular fa-pen-to-square" id="ouvrirModalLink"></i>
         <p class="mode-edition">Mode édition</p>
-      </div>
+      </div> 
       <div class="header">
         <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         <nav>
           <ul>
-            <li>projets</li>
-            <li>contact</li>
+            <li><a href="#portfolio">projets</a></li>
+            <li><a href="#contact">contact</a></li>
             <li><a class="login" href="login.html">login</a></li>
             <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
           </ul>
